--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,10 @@ h6 {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/background.png")
+    background: url("../img/background.png") top right no-repeat;
+    background-size: cover;
+    position: relative;
+
 }
 
 @media (min-width: 992px) {
